@@ -550,6 +550,7 @@ var CloudCommander, Util,
         return lRet;
     },
     
+    
     /**
      * Функция создаёт елемент style и записывает туда стили 
      * @param pParams_o - структура параметров, заполняеться таким
