@@ -135,6 +135,13 @@ Util = exports || {};
         return pStr.replace(pSubStr,'');
     };
     
+    /**
+     * function replase pFrom to pTo in pStr
+     * @pStr
+     * @pFrom
+     * @pTo
+     */
+    
     Util.replaceStr             = function(pStr, pFrom, pTo){
         var lRet;
         
@@ -143,6 +150,45 @@ Util = exports || {};
        
        return lRet;
     };
+    
+    /**
+     * function render template with view
+     * @pTempl
+     * @pView
+     */
+    Util.render                  = function(pTempl, pView){
+        var lRet = Util.ownRender(pTempl, pView, ['{', '}']);
+                
+        return lRet;
+    };
+    
+    /**
+     * function render template with view and own symbols
+     * @pTempl
+     * @pView
+     * @pSymbols
+     */
+    Util.ownRender                  = function(pTempl, pView, pSymbols){
+        if(!pSymbols)
+            pSymbols = ['{', '}'];
+            
+        var lRet    = pTempl,
+            lFirstChar,
+            lSecondChar;
+            
+            lFirstChar  = pSymbols[0];
+            lSecondChar = pSymbols[1]  || lFirstChar;
+        
+        for(var lVar in pView){
+            var lStr = pView[lVar];
+            lStr = Util.exec(lStr) || lStr;
+            
+            lRet = Util.replaceStr(lRet, lFirstChar + lVar + lSecondChar, lStr);
+        }
+        
+        return lRet;
+    };
+    
     
     /**
      * invoke a couple of functions in paralel
