@@ -89,6 +89,8 @@ clicked on menu item.
 
 * Added ability to read storage modules information from menu module.
 
+* Added easy template renderrer system Util.render.
+
 
 2012.12.12, Version 0.1.8
 
